# gdbus-p2p

./: README.md  gdbus-p2p.spec
gdbus_p2p-1.0/: clean.sh  configure.ac
gdbus_p2p-1.0/data/: Makefile.am  gdbusp2p.service.in  org.freedesktop.Gdbusp2p.conf.in  org.freedesktop.Gdbusp2p.service.in  org.freedesktop.Gdbusp2p.xml
gdbus_p2p-1.0/src/: Makefile.am  client.c  server.c
